--- a/PenguinChat/app/src/main/res/values/colors.xml
+++ b/PenguinChat/app/src/main/res/values/colors.xml
@@ -9,4 +9,9 @@
     <color name="green_pressed">#89b02c</color>
     <color name="red">#fa4242</color>
     <color name="red_pressed">#c83434</color>
+    <color name="slight_blue">#B1C8F2</color>
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="dgray">#444444</color>
+
 </resources>
